<resources>
    <string name="app_name">Gasto de viagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMS por litro</string>
    <string name="your_spending">Seu gasto total será de:</string>
    <string name="currency">R$</string>
    <string name="calculate">Calcular</string>
    <string name="fill_in_all_fields">Preencha todos os campos</string>
    <string name="invalid_values">Informe um valor valido!!</string>
</resources>
